--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Simon Game - Hard Mode</title>
+  <!-- favicon -->
+  <link rel="shortcut icon" href="images/favicon.png">
   <!-- Core css -->
   <link rel="stylesheet" href="styles.css">
   <!-- Google Fonts -->
