--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Simon Game - Hard Mode</title>
-  <!-- favicon -->
+  <!-- favicon Icon made by Freepik www.flaticon.com -->
   <link rel="shortcut icon" href="images/favicon.png">
   <!-- Core css -->
   <link rel="stylesheet" href="styles.css">
